# demo-directory-structure

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  cookiecutter.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
conf/: config.yaml
conf/experiment/: default.yaml
src/poc/app/: main.py
src/poc/models/: train.py
src/poc/pipeline/: __init__.py
src/poc/schema/: __init__.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: question.md
{{cookiecutter.project_slug}}/conf/: config.yaml
{{cookiecutter.project_slug}}/conf/experiment/: default.yaml
{{cookiecutter.project_slug}}/docs/: project_workflow.md
{{cookiecutter.project_slug}}/scripts/: train.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/schema/: __init__.py
