[project]
name = "poc"
version = "0.1.0"
description = "POC development environment"
requires-python = ">=3.12"
dependencies = [
    "pandera>=0.20",
    "hydra-core>=1.3",
    "mlflow>=2.13",
    "streamlit>=1.35",
    "jupyterlab>=4.2",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/poc"]
