[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">=3.12"
dependencies = [
    # ── ML（WARNING: 不要なものは削除してください）────────────────────────
    "lightgbm>=4.3",
    "optuna>=3.6",
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    # ── 実験管理 ──────────────────────────────────────────────────────────
    "hydra-core>=1.3",
    "hydra-optuna-sweeper>=1.2",
    "mlflow>=2.13",
    # ── データ品質 ────────────────────────────────────────────────────────
    "pandera[pandas]>=0.20",
    # ── 可視化・アプリ ────────────────────────────────────────────────────
    "plotly>=5.20",
    "streamlit>=1.35",
    # ── 開発環境 ──────────────────────────────────────────────────────────
    "jupyterlab>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.uv.scripts]
# WARNING: スクリプト名をプロジェクトに合わせて変更してください
# 例: kaggle06-train = "python scripts/train.py"
"{{cookiecutter.project_slug}}-train" = "python scripts/train.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.project_slug}}"]
